--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ pubspec.lock
 # If you don't generate documentation locally you can remove this line.
 doc/api/
 
+/android/key.properties
+
 # Avoid committing generated Javascript files:
 *.dart.js
 *.info.json      # Produced by the --dump-info flag.
